# kaira

./: CMakeLists.txt  LICENSE  README.md
include/: AssetManager.h  Game.h  InputManager.h  State.h  StateMachine.h
src/: AssetManager.cpp  Game.cpp  InputManager.cpp  StateMachine.cpp
